<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_fragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_Daily_Record" />
        <item
            android:id="@+id/nav_weather_fragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_Home_screen" />
        <item
            android:id="@+id/nav_add_fragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_Pain_Data_Entry" />
        <item
            android:id="@+id/nav_view_fragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_Report" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_map" />
    </group>
</menu>